--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "redux-localstorage-simple": "^2.1.6"
   },
   "scripts": {
     "start": "react-scripts start",
